[gd_scene load_steps=2 format=3 uid="uid://g2podbuaps3s"]

[ext_resource type="Script" uid="uid://bggw6msa33f2k" path="res://Ui/NavigationBar.gd" id="1"]

[node name="NavigationBar" type="Panel"]
custom_minimum_size = Vector2(0, 80)
script = ExtResource("1")

[node name="NavContainer" type="VBoxContainer" parent="."]
layout_mode = 0

[node name="TopRow" type="HBoxContainer" parent="NavContainer"]
layout_mode = 2

[node name="CombatBtn" type="Button" parent="NavContainer/TopRow"]
layout_mode = 2
text = "⚔️ Combat"

[node name="EquipmentBtn" type="Button" parent="NavContainer/TopRow"]
layout_mode = 2
text = "🛡️ Equipment"

[node name="UpgradesBtn" type="Button" parent="NavContainer/TopRow"]
layout_mode = 2
text = "💎 Upgrades"

[node name="InventoryBtn" type="Button" parent="NavContainer/TopRow"]
layout_mode = 2
text = "🎒 Inventory"

[node name="SettingsBtn" type="Button" parent="NavContainer/TopRow"]
layout_mode = 2
text = "⚙️ Settings"

[node name="BottomRow" type="HBoxContainer" parent="NavContainer"]
layout_mode = 2

[node name="HomeBtn" type="Button" parent="NavContainer/BottomRow"]
layout_mode = 2
text = "🏠 Home"

[node name="HeroBtn" type="Button" parent="NavContainer/BottomRow"]
layout_mode = 2
text = "👤 Hero"

[node name="ProgressBtn" type="Button" parent="NavContainer/BottomRow"]
layout_mode = 2
text = "📈 Progress"

[node name="QuestsBtn" type="Button" parent="NavContainer/BottomRow"]
layout_mode = 2
text = "🎯 Quests"

[node name="ShopBtn" type="Button" parent="NavContainer/BottomRow"]
layout_mode = 2
text = "🏪 Shop"

[node name="MoreBtn" type="Button" parent="NavContainer/BottomRow"]
layout_mode = 2
text = "⋯ More"
